math-core/tests/snapshots/wiki_test__wiki014.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\operatorname{sh}k, \\operatorname{ch}l, \\operatorname{th}m, \\operatorname{coth}n"
---
<math>
    <mo lspace="0.1667em" rspace="0.1667em">sh</mo>
    <mi>k</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">ch</mo>
    <mi>l</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">th</mo>
    <mi>m</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">coth</mo>
    <mi>n</mi>
</math>
