math-core/tests/snapshots/wiki_test__wiki015.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\sgn r, \\left\\vert s \\right\\vert"
---
<math>
    <mo lspace="0" rspace="0.1667em">sgn</mo>
    <mi>r</mi>
    <mo>,</mo>
    <mrow>
        <mo>|</mo>
        <mi>s</mi>
        <mo>|</mo>
    </mrow>
</math>
