math-core/tests/snapshots/wiki_test__wiki018.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\lim u, \\liminf v, \\limsup w"
---
<math>
    <mo lspace="0.1667em" rspace="0.1667em">lim</mo>
    <mi>u</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">lim inf</mo>
    <mi>v</mi>
    <mo>,</mo>
    <mo lspace="0" rspace="0.1667em">lim sup</mo>
    <mi>w</mi>
</math>
